--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
 @font-face {
-    font-family: 'Gecko Lunch';
-    src: url("/assets/typeface/Gecko%20Lunch.ttf")
-}
-@font-face {
     font-family: 'Gotham';
     src: url("/assets/typeface/GothamBook.ttf")
 }
@@ -14,9 +10,17 @@
     font-family: 'Gotham';
     src: url("/assets/typeface/GothamBold.ttf")
 }
+@font-face {
+    font-family: 'Gotham';
+    src: url("/assets/typeface/Gotham-Bold.otf")
+}
+@font-face {
+    font-family: 'Gotham';
+    src: url("/assets/typeface/Gotham-Light.otf")
+}    
 
 body {
-    background-color: #F3EBD6;
+    background-color: #F3EBD6!important;
     width: 100vw;
     height: 100vh;
     margin: 0;
@@ -43,7 +47,7 @@ h3 {
 
 .header h1 {
     text-align: center;
-    font-family: 'gecko lunch';
+    font-family: 'Lobster', cursive;
 }
 .header a {
     text-decoration: none;
@@ -112,17 +116,22 @@ h3 {
 #xmark {
     display: none;
 }
+
 .navbar {
     height: 3.5rem;
     display: flex;
-    align-items: center;
+/*    align-items: center;*/
     width: 100%;
     font-family: 'gotham';
-    background-color: white;
+    margin: 0;
 }
-.navbar a {
+nav a {
     text-decoration: none;
     color: #000000;
+    height: 100%;
+    margin:0;
+    padding: 0;
+    width: 25%;
 }
 .dropdown li {
     line-height: 1rem;
@@ -137,10 +146,8 @@ button {
     line-height: 1.2rem;
     padding: 1rem;
     transition-duration: 300ms;
-}
-.navbar button {
-    display: inline-block;
     height: 100%;
+    width: 100%;
 }
 .dropdown {
     position: relative;
@@ -162,10 +169,7 @@ button {
     line-height: 2.5rem;
     pointer-events: none;
     opacity: 0;
-/*
-    transform: translateY(-10px);
-    transition: all 0.4s ease;
-*/
+
 }
 .dropdown li {
     list-style: none;
@@ -179,6 +183,7 @@ button {
     text-decoration: none;
     color: #000000;
     text-transform: uppercase;
+    width: 100%;
 }
 .dropdown button:focus + ul, .dropdown button:hover + ul {
     opacity: 1;
@@ -286,7 +291,7 @@ footer p {
 }
 .row a, .row2 a {
     width: 31%;
-    height: 150px;
+    height: 250px;
     margin-right: 2rem;
     position: relative;
 }
@@ -335,8 +340,7 @@ footer p {
     font-size: 1rem;
 }
 .highimgcont {
-    height: 200px;
-    background-color: pink;
+    height: 280px;
 }
 .highimgcont img {
     height: 100%;
@@ -399,6 +403,10 @@ footer p {
 }
 
 @media only screen and (max-width: 600px) {
+    body {
+        overflow-x: hidden!important;
+        width: 100%;
+    }
     .content {
         width: 100%;
         margin: 0;
@@ -513,15 +521,14 @@ footer p {
     }
     #hovergrid .row, #hovergrid .row2 {
         flex-direction: column;
-        background-color: aqua;
         margin: 0;
     }
     #hovergrid #hover1 {
         flex-direction: row;
-        background-color: blue;
     }
     .row a, .row2 a {
         margin: 0;
+        height: 180px;
         width: 100%;
     }
     .shighlight .row {
@@ -548,10 +555,11 @@ footer p {
     }
     .highimgcont {
         height: 380px;
+        width: 100%;
     }
     .highimgcont img {
         height: 100%;
-        width: auto;
+        width: 100%;
         object-fit: cover;
     }
     footer {
